tests/algorithms/x/C/data_compression/huffman.c
// Generated by Mochi 0.10.32 on 2025-08-24 14:55 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t sort_nodes_len;
size_t rest_len;
size_t count_freq_len;
size_t concat_pairs_len;
size_t *concat_pairs_lens;
size_t collect_codes_len;
size_t *collect_codes_lens;

size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
    arr = realloc(arr, (*len + 1) * sizeof(const char**));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char** list_append_str_new(const char **arr, size_t len, const char *val) {
    const char **res = malloc((len + 1) * sizeof(const char*));
    if (arr && len) memcpy(res, arr, len * sizeof(const char*));
    res[len] = val;
    append_len = len + 1;
    return res;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Leaf Leaf;
typedef struct Node Node;

struct Leaf {
    const char* symbol;
    long long freq;
};

struct Node {
    long long freq;
    const char* left;
    const char* right;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long get_freq(const char* n);
const char* * sort_nodes(const char* * nodes, size_t nodes_len);
const char* * rest(const char* * nodes, size_t nodes_len);
const char* * count_freq(const char* text);
const char* build_tree(const char* * nodes, size_t nodes_len);
const char* * * concat_pairs(const char* * * a, size_t a_len, size_t* a_lens, size_t a_lens_len, const char* * * b, size_t b_len, size_t* b_lens, size_t b_lens_len);
const char* * * collect_codes(const char* tree, const char* prefix);
const char* find_code(const char* * * pairs, size_t pairs_len, size_t* pairs_lens, size_t pairs_lens_len, const char* ch);
const char* huffman_encode(const char* text);
int main(void);

long long get_freq(const char* n) {
    return (n == Leaf(_, f) ? f : f);
}

const char* * sort_nodes(const char* * nodes, size_t nodes_len) {
    const char* *arr = nodes;
    size_t arr_len = nodes_len;
    long long i = 1LL;
    while (i < arr_len) {
        const char* key = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        long long j = i - 1LL;
        while ((j >= 0LL) && (get_freq(arr[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})]) > get_freq(key))) {
            arr[(int)(j + 1LL)] = arr[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
            j = j - 1LL;
        }
        arr[(int)(j + 1LL)] = key;
        i = i + 1LL;
    }
    return sort_nodes_len = arr_len, arr;
}

const char* * rest(const char* * nodes, size_t nodes_len) {
    const char* *res = NULL;
    size_t res_len = 0;
    long long i = 1LL;
    while (i < nodes_len) {
        res = list_append_str(res, &res_len, nodes[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? nodes_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return rest_len = res_len, res;
}

const char* * count_freq(const char* text) {
    const char* *chars = NULL;
    size_t chars_len = 0;
    long long *freqs = NULL;
    size_t freqs_len = 0;
    long long i = 0LL;
    while (i < strlen(text)) {
        const char* c = _substring(text, i, i + 1LL);
        long long j = 0LL;
        long long found = 0LL;
        while (j < chars_len) {
            if (strcmp(chars[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? chars_len + _mochi_idx : _mochi_idx;})], c) == 0) {
                freqs[(int)(j)] = freqs[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? freqs_len + _mochi_idx : _mochi_idx;})] + 1LL;
                found = 1LL;
                break;
            }
            j = j + 1LL;
        }
        if (!(found)) {
            chars = list_append_str(chars, &chars_len, c);
            freqs = list_append_long_long(freqs, &freqs_len, 1LL);
        }
        i = i + 1LL;
    }
    const char* *leaves = NULL;
    size_t leaves_len = 0;
    long long k = 0LL;
    while (k < chars_len) {
        leaves = list_append_str(leaves, &leaves_len, (Leaf){.symbol = chars[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? chars_len + _mochi_idx : _mochi_idx;})], .freq = freqs[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? freqs_len + _mochi_idx : _mochi_idx;})]});
        k = k + 1LL;
    }
    {
        const char** __ret2 = sort_nodes(leaves, leaves_len);
        count_freq_len = sort_nodes_len;
        return __ret2;
    }
}

const char* build_tree(const char* * nodes, size_t nodes_len) {
    const char* *arr = nodes;
    size_t arr_len = nodes_len;
    while (arr_len > 1LL) {
        const char* left = arr[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        arr = rest(arr, arr_len);
        arr_len = rest_len;
        const char* right = arr[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        arr = rest(arr, arr_len);
        arr_len = rest_len;
        Node node = (Node){.freq = get_freq(left) + get_freq(right), .left = left, .right = right};
        arr = list_append_str_new(arr, arr_len, node);
        arr_len++;
        arr = sort_nodes(arr, arr_len);
        arr_len = sort_nodes_len;
    }
    return arr[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
}

const char* * * concat_pairs(const char* * * a, size_t a_len, size_t* a_lens, size_t a_lens_len, const char* * * b, size_t b_len, size_t* b_lens, size_t b_lens_len) {
    const char* **res = a;
    size_t res_len = a_len;
    size_t *res_lens = a_lens;
    size_t res_lens_len = a_len;
    long long i = 0LL;
    while (i < b_len) {
        res = list_append_strptr(res, &res_len, b[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})]);
        res_lens = list_append_szt(res_lens, &res_lens_len, b_lens[(int)(i)]);
        i = i + 1LL;
    }
    return concat_pairs_lens = res_lens, concat_pairs_len = res_len, res;
}

const char* * * collect_codes(const char* tree, const char* prefix) {
    return (tree == Leaf(s, _) ? ({int** tmp = malloc(1 * sizeof(int*)); tmp[0] = ({const char* *tmp = malloc(2 * sizeof(const char*)); tmp[0] = s; tmp[1] = prefix; tmp;}); tmp;}) : ({const char*** __tmp3 = collect_codes(l, str_concat(prefix, "0")); size_t __tmp3_len = collect_codes_len; size_t* __tmp3_lens = collect_codes_lens; const char*** __tmp4 = collect_codes(r, str_concat(prefix, "1")); size_t __tmp4_len = collect_codes_len; size_t* __tmp4_lens = collect_codes_lens; concat_pairs(__tmp3, __tmp3_len, __tmp3_lens, __tmp3_len, __tmp4, __tmp4_len, __tmp4_lens, __tmp4_len);}));
}

const char* find_code(const char* * * pairs, size_t pairs_len, size_t* pairs_lens, size_t pairs_lens_len, const char* ch) {
    long long i = 0LL;
    while (i < pairs_len) {
        if (strcmp(pairs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? pairs_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? pairs_lens[(int)(i)] + _mochi_idx : _mochi_idx;})], ch) == 0) {
            return pairs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? pairs_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? pairs_lens[(int)(i)] + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return "";
}

const char* huffman_encode(const char* text) {
    if (strcmp(text, "") == 0) {
        return "";
    }
    const char* *leaves = count_freq(text);
    size_t leaves_len = count_freq_len;
    const char* tree = build_tree(leaves, leaves_len);
    const char* **codes = collect_codes(tree, "");
    size_t codes_len = collect_codes_len;
    size_t *codes_lens = collect_codes_lens;
    size_t codes_lens_len = collect_codes_len;
    const char* encoded = "";
    long long i = 0LL;
    while (i < strlen(text)) {
        const char* c = _substring(text, i, i + 1LL);
        encoded = str_concat(str_concat(encoded, find_code(codes, codes_len, codes_lens, codes_len, c)), " ");
        i = i + 1LL;
    }
    return encoded;
}

int main(void) {
    {
        long long __start = _now();
        puts(huffman_encode("beep boop beer!"));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
